--- a/DataAggregator/DataAggregator/DataAggregator.fsproj
+++ b/DataAggregator/DataAggregator/DataAggregator.fsproj
@@ -9,4 +9,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.110" />
+  </ItemGroup>
+
 </Project>
